@@ -19,5 +19,6 @@ return {
 		-- new moduleapi methods
 		"getopt-enum";
 		"getopt-interval";
+		"getopt-period";
 	};
 };
